--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <section class="box-section">
       <div class="white-box">
-        <div class="question-one-container">
+        <div class="question-one-container" id="questionOne-Container">
           <h1>Which language runs in a web browser?</h1>
           <div class="option-container">
             <label class="cmn-size">
@@ -45,7 +45,7 @@
           </label>
           </div>
         </div>
-        <!-- <div class="question-two-container">
+        <div class="question-two-container" id="questionTwo-Container">
           <h1>What does CSS stand for?</h1>
           <div class="option-container">
             <label class="cmn-size">
@@ -66,8 +66,8 @@
             Cars SUVs Sailboats
           </label>
           </div>
-        </div> -->
-        <!-- <div class="question-three-container">
+        </div>
+        <div class="question-three-container" id="questionThree-Container">
           <h1>What does HTML stand for?</h1>
           <div class="option-container">
             <label class="cmn-size">
@@ -88,8 +88,8 @@
             Helicopters Terminals Motorboats Lamborginis
           </label>
           </div>
-        </div> -->
-        <!-- <div class="question-four-container">
+        </div>
+        <div class="question-four-container" id="questionFour-Container">
           <h1>What year was JavaScript launched?</h1>
           <div class="option-container">
             <label class="cmn-size">
@@ -110,10 +110,10 @@
             none of the above
           </label>
           </div>
-        </div> -->
-        <!-- <div class="result-container">
+        </div>
+        <div class="result-container" id="result-container">
           <span class="span-result">You answered 4/4 questions correctly</span>
-        </div> -->
+        </div>
       </div>
       <button class="btnSubmit" id="submitbtn">Submit</button>
     </section>
