onclick function added on every option

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
           <h1>What does CSS stand for?</h1>
           <div class="option-container">
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="1" />
+              <input type="checkbox" name="option" value="1" onclick="toggleCheckbox(this)" />
               Central Style Sheets
             </label>
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="2" />
+              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" />
               Cascading Style Sheets
             </label>
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="3" />
+            <input type="checkbox" name="option" value="3" onclick="toggleCheckbox(this)" />
             Cascading Simple Sheets
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="4" />
+            <input type="checkbox" name="option" value="4" onclick="toggleCheckbox(this)" />
             Cars SUVs Sailboats
           </label>
           </div>
@@ -71,20 +71,20 @@
           <h1>What does HTML stand for?</h1>
           <div class="option-container">
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="1" />
+              <input type="checkbox" name="option" value="1" onclick="toggleCheckbox(this)" />
               Hypertext Markup Language
             </label>
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="2" />
+              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" />
               Hypertext Markdown Language
             </label>
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="3" />
+            <input type="checkbox" name="option" value="3" onclick="toggleCheckbox(this)" />
             Hyperloop Machine Language
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="4" />
+            <input type="checkbox" name="option" value="4" onclick="toggleCheckbox(this)" />
             Helicopters Terminals Motorboats Lamborginis
           </label>
           </div>
@@ -93,20 +93,20 @@
           <h1>What year was JavaScript launched?</h1>
           <div class="option-container">
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="1" />
+              <input type="checkbox" name="option" value="1" onclick="toggleCheckbox(this)" />
               1996
             </label>
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="2" />
+              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" />
               1995
             </label>
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="3" />
+            <input type="checkbox" name="option" value="3" onclick="toggleCheckbox(this)" />
             1994
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="4" />
+            <input type="checkbox" name="option" value="4" onclick="toggleCheckbox(this)" />
             none of the above
           </label>
           </div>
