--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Python
           </label>
           <label class="cmn-size">
-            <input type="checkbox" name="option" value="4" onclick="toggleCheckbox(this)" />
+            <input type="checkbox" name="option" value="4" onclick="toggleCheckbox(this)" id="javascriptAnswer" />
             JavaScript
           </label>
           </div>
@@ -53,7 +53,7 @@
               Central Style Sheets
             </label>
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" />
+              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" id="cascadingAnswer" />
               Cascading Style Sheets
             </label>
           </label>
@@ -71,7 +71,7 @@
           <h1>What does HTML stand for?</h1>
           <div class="option-container">
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="1" onclick="toggleCheckbox(this)" />
+              <input type="checkbox" name="option" value="1" onclick="toggleCheckbox(this)" id="hyperTextAnswer" />
               Hypertext Markup Language
             </label>
             <label class="cmn-size">
@@ -97,7 +97,7 @@
               1996
             </label>
             <label class="cmn-size">
-              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" />
+              <input type="checkbox" name="option" value="2" onclick="toggleCheckbox(this)" id="yearAnswer" />
               1995
             </label>
           </label>
@@ -112,10 +112,16 @@
           </div>
         </div>
         <div class="result-container" id="result-container">
-          <span class="span-result">You answered 4/4 questions correctly</span>
+          <span class="span-result" id="finalResult"></span>
         </div>
       </div>
-      <button class="btnSubmit" id="submitbtn">Submit</button>
+    <div class="btn-container" id="btn-container-remove">
+      <button class="btnSubmit" id="submitbtn" onclick="checkToggle()">Submit</button>
+    </div>
+      <div class="btn-container-add" id="btnAdd">
+        <button class="btnReload btnSubmit" id="Reloadbtn" onclick="reloadFunction()">Reload</button>
+      </div>
+      
     </section>
     <script src="./scripts/script.js"></script>
   </body>
